# sam_based_fungal_app

./: .gitignore  DEVELOPING.md  LICENSE  README.md  app.py  app_environment.yml  boot.py  cellpose4_environment.yml  conda_list.txt  gui.md  gui.py  gui.sh  pyproject.toml  requirements.txt  segment_with_cellpose_sam_worker.py
.streamlit/: config.toml  config.toml.bak
demo_data/masks/: demo10_masks.npy  demo11_masks.npy  demo12_masks.npy  demo13_masks.npy  (+10 more)
help_texts/: intro_page.py
helpers/: boxes.py  cell_metrics_functions.py  cellpose_functions.py  classifying_functions.py  config.py  densenet_functions.py  help_panels.py  image_io.py  mask_editing_functions.py  masks.py  sam2_functions.py  state_ops.py  upload_download_functions.py
intro_images/: directory_org.pptx  ~$directory_org.pptx
notebooks/: classificatoin_test.ipynb  sam2_fine_tune.ipynb  usam_fine_tune.ipynb
pages/: 1_📥_Upload_data.py  2_Create_and_Edit_Masks.py  2_🎭_Create_and_Edit_Masks.py  3_Classify_Cells.py  4_🧠_Fine_Tune_Models.py  5_📊_Cell_Metrics.py  6_⬇️_Downloads.py
panels/: cell_metrics_panel.py  classify_cells.py  classify_cells_panel.py  download_panel.py  fine_tune_panel.py  mask_editing.py  mask_editing_panel.py  train_densenet_panel.py  upload.py  upload_panel.py
src/: segment_with_cellpose_sam_worker.py
src/training/: densenet_worker.py  finetune_worker.py  inference_worker.py  pyproject.toml  validation_worker.py
views/: 1_Upload_data.py  1_home_page.py  2_Create_and_Edit_Masks.py  2_Upload_data.py  3_Create_and_Edit_Masks.py  4_Fine_Tune_Models.py  5_Cell_Metrics.py
(+23 files in other folders)
