[project]
name = "mycol"
version = "0.1.0"
description = "A Streamlit app for cell segmentation and classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit==1.51.0",
    "cellpose>=4.0.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "opencv-python-headless",  # Lighter than opencv-python
    "scikit-learn==1.5.2",
    "scikit-image==0.25.2",
    "pandas==2.3.2",
    "numpy>=1.26.4",
    "scipy==1.15.3",
    "pillow==10.4.0",
    "plotly==6.3.1",
    "streamlit-image-coordinates==0.4.0",
    "tifffile==2024.9.20",
    "optuna==4.6.0",
    "sam2==1.1.0",
    "huggingface_hub==1.1.2",
    "kaleido",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }


[dependency-groups]
dev = [
    "black",
    "ruff",
]
